app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-app
  template:
    metadata:
      labels:
        app: core-app
    spec:
      containers:
      - name: core-app
        image: corehealth
        ports:
        - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /v3/api/actuator/health
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /v3/api/actuator/health
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 10





---
apiVersion: v1
kind: Service
metadata:
  name: core-app
spec:
  type: ClusterIP        ##LoadBalancer ##ClusterIP
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: core-app
