virtualservicedns.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notify-vs-external
spec:
  hosts:
  - "istio-backend.harshad.shop"
  gateways:
  - notify-gateway-external
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: core-app
        port:
